# eink-calendar

./: .gitignore  LICENSE.md  README.md  pyproject.toml
.github/workflows/: lint.yaml
eink_calendar/: __init__.py  __main__.py  display.py
eink_calendar/api/: __init__.py  client.py  event.py  event_stream.py
eink_calendar/ui/: __init__.py  display.py  event.py  text.py
